--- a/docs/系统设计.md
+++ b/docs/系统设计.md
@@ -5,14 +5,14 @@
 为了更好的梳理本系统的总体思路，进而产生一个可用的解决方案，便于将设计方案转换成程序代码。本设计实现的有声读物配音系统的总体结构图如图1.1所示。
 
 
-![](D:\Users\wuyuxiang\Desktop\test\docs\image\1.jpg)
+![](D:\Audiobook Dubbing System\docs\image\1.jpg)
 
 图1.1 系统总体结构图
 
 该系统分为管理员和用户两种角色，此二者的核心功能结构图如图1.2所示。
 
 
-![](D:\Users\wuyuxiang\Desktop\test\docs\image\2.jpg)
+![](D:\Audiobook Dubbing System\docs\image\2.jpg)
 
 图1.2核心功能结构图
 
@@ -21,7 +21,7 @@
 使用本系统首先需要进行登录操作，用户与管理员需要账号密码才能登录，登录流程图如图3.3所示。
 
 
-![](D:\Users\wuyuxiang\Desktop\test\docs\image\3.jpg)
+![](D:\Audiobook Dubbing System\docs\image\3.jpg)
 
 图1.3 登录功能流程图
 
@@ -36,7 +36,7 @@
 用户或管理员需要输入修改的信息（用户昵称、手机号码、邮箱、性别），后端对手机号码的合法性进行校验，校验成功后更新数据库中信息，并返回修改成功。修改资料的业务流程如图1.4资料修改功能流程图所示。
 
 
-![](D:\Users\wuyuxiang\Desktop\test\docs\image\4.jpg)
+![](D:\Audiobook Dubbing System\docs\image\4.jpg)
 
 图1.4 资料修改功能流程
 
@@ -47,7 +47,7 @@
 用户或管理员需要输入旧密码、新密码、确认新密码，后端会对新密码合法性进行校验且在进行加密后和数据库中的数据进行对比，成功后更新数据库中信息，然后跳转到登录页面重新登录。修改密码的业务流程如图1.5修改密码功能流程图所示。
 
 
-![](D:\Users\wuyuxiang\Desktop\test\test\docs\image\5.jpg)
+![](D:\Audiobook Dubbing System\docs\image\5.jpg)
 
 图1.5密码修改功能流程图
 
@@ -58,7 +58,7 @@
 用户或管理员需要选择本地文件进行上传，页面会校验文件格式的合法性（只允许上传txt格式的文件、限制大小10M)，成功上传后需要点击开始解析按钮，解析成功后可在下方文本框中可展示文件文本内容。另提供一键复制按钮，供用户或管理员复制文件文本内容到剪贴板。文本上传的业务流程如图1.6文件上传功能流程图所示。
 
 
-![](D:\Users\wuyuxiang\Desktop\test\docs\image\6.jpg)
+![](D:\Audiobook Dubbing System\docs\image\6.jpg)
 
 图1.6 文本上传功能流程图
 
@@ -69,7 +69,7 @@
 用户或管理员需要在文本框中输入或粘贴小说文本，然后选择情感类型，点击合成音频。合成音频成功后可对音频进行试听，用户或管理员在试听效果满意后可进行保存，成功则更新数据库中信息并返回保存成功。音频合成的业务流程如图1.7音频合成功能流程图所示。
 
 
-![](D:\Users\wuyuxiang\Desktop\test\docs\image\7.jpg)
+![](D:\Audiobook Dubbing System\docs\image\7.jpg)
 
 图1.7音频合成功能流程图
 
@@ -188,8 +188,14 @@
 </tr></table>
 
 
-## 3.9API调用
+## 3.9API调用设计
 
 本设计API调用参考下图，参数选择：emo_control_method_idx="与音色参考音频相同"。参考音频在voice文件夹下，喜，怒，哀，惧四个参考音频对应本设计中喜怒哀惧四种音色，TTS模型端口在http://localhost:7860/开启。
 
-![](D:\Users\wuyuxiang\Desktop\test\docs\image\8.png)
+![](D:\Audiobook Dubbing System\docs\image\api\1.png)
+
+![](D:\Audiobook Dubbing System\docs\image\api\2.png)
+
+![](D:\Audiobook Dubbing System\docs\image\api\3.png)
+
+![](D:\Audiobook Dubbing System\docs\image\api\4.png)
